--- a/bot/config.json
+++ b/bot/config.json
@@ -1,6 +1,6 @@
 {
-	"token": "MjM4NzE3ODY2NTIwNzM5ODQw.Cw9vTg.3CsWGCVknEo96Qb6HTqGy5ET7YU",
-	"app_id": "238717866520739840",
+	"token": "MjQ4ODk0MDM5MjEyOTQ5NTA2.Cw-YMg.RLdxByJqXWmJGt0fxBD_x1HTQT4",
+	"app_id": "248894039212949506",
 	"command_prefix": "@",
 	"mod_command_prefix": "#",
 	"non_essential_event_listeners": true,
